--- a/Rulesets/feats.yaml
+++ b/Rulesets/feats.yaml
@@ -150,7 +150,7 @@
               While you are holding a double-bladed scimitar with two hands, you gain a +1 bonus to Armor Class.
               A double-bladed scimitar has the finesse property when you wield it.
    - title: Ritual Caster
-   - content: Prerequisite - Intelligence or Wisdom 13 or higher. You have a ritual book with two 1-st level ritual spells from one class and you can later on add other ritual spells you found.
+   - content: Prerequisite - Intelligence or Wisdom 13 or higher. You have a ritual book with two 1st level ritual spells from one class and you can later on add other ritual spells you found.
    - title: Savage Attacker
    - content: You can reroll melee weapon attack damage once per turn.
    - title: Second Chance
