--- a/Rulesets/race_abilities.yaml
+++ b/Rulesets/race_abilities.yaml
@@ -477,9 +477,9 @@
     - title: Fey Gift
     - content: You can use this trait to take the Help action as a bonus action, and you can do so a number of times equal to your proficiency bonus. You regain all expended uses when you finish a long rest. Starting at 3rd
                level, choose one of the options below each time you take the Help action, whether as a bonus action or an action -  
-               Hospitality - You and the target of your Help action each gain a number of temporary hit points equal to 1d6 plus your proficiency bonus.
-               Passage - You and the target of your Help action each increase your walking speeds by 10 feet until the start of your next turn.
-               Spite - Until the start of your next turn, the first time you or the target of your Help action hits a creature with an attack roll, that creature has disadvantage on the next attack roll that it makes within
+    - content: Hospitality - You and the target of your Help action each gain a number of temporary hit points equal to 1d6 plus your proficiency bonus.
+    - content: Passage - You and the target of your Help action each increase your walking speeds by 10 feet until the start of your next turn.
+    - content: Spite - Until the start of your next turn, the first time you or the target of your Help action hits a creature with an attack roll, that creature has disadvantage on the next attack roll that it makes within
                the next minute 
     - title: Fortune of the Many
     - content: If you miss with an attack roll or fail an ability check or a saving throw, you can draw on your bonds of reciprocity to gain a bonus to the roll equal to the number of allies you can see within 30
@@ -1819,3 +1819,36 @@
                must choose to do so before the roll. When you take a long rest you lose this foretold roll.
     - title: Psychic Resistance
     - content: You have resistance to psychic damage.
+    
+    
+  - title: Troll Abilities
+  - abilities: 
+    - title: Troll Healing
+    - content: Trolls often prove difficult to kill because of their amazing healing powers.  You have advantage on death saving throws.  Additionally, when you spend hit dice to heal, you regain an extra 1d6 hit points for 
+               each hit die spent. 
+    - title: Powerful Build
+    - content: You count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift.  
+    - title: Troll Deformity
+    - content: The physical shape of a troll is twisted and deformed. They often have multiple heads, warty stone like skin or extra arms. While often horrific in appearance these deformities rarely inconvenience the troll and 
+               are often a boon. Pick one from the list below.  
+    - content: Horns - you have grown larger than normal horns that may be used as a natural weapon to make unarmed strikes. The horns deal 1d6+strength on a hit. 
+    - content: Multiple Heads - You have an additional head. You gain advantage on perception checks and rolls to awake from sleep. Additionally, attacks that remove heads only render you unconscious for 24 hours while the 
+                                secondary head grows bigger and becomes dominant. After 30 days your lost head will regrow and during this time you lose the benefits of this deformity. 
+    - content: Multiple Arms - You have an extra pair of arms and gain advantage on rolls to resist grapples and for climbing. You can also carry small items in the extra appendage(s) but can’t use it to fight with. Lost arms 
+                               will regrow after a period of 30 days during which time you lose the benefits of this deformity. 
+    - title: Natural Armor
+    - content: Stone trolls have tough stone-like skin with spikes and/or crystalline like structures jutting out. You cannot wear armor but your skin provides a base AC of 17 (Dexterity does not affect this number). You gain 
+               no benefit from wearing armor but can apply a shield’s bonus as normal.  
+    - title: Iron Worker
+    - content: You gain proficiency with blacksmithing tools. 
+    - title: Woodland lore
+    - content: You gain proficiency in the Nature skill.  
+    - title: Forest Magic
+    - content: The Huldrefolk are deeply connected with the magic of the woods. You know the Druidcraft cantrip. When you reach 3rd level you can cast the Animal Friendship spell once per day. When you reach 5th level, you can 
+               also cast the Locate Animals or Plants spell once per day. Wisdom is your spell casting modifier.
+    - title: Cast-Iron Gut
+    - content: You have advantage on Constitution saving throws against diseases, ingested substances, and effects that rely on inhalation of gases. In addition, you can eat, and live off of more types of foods that most 
+               creatures cannot. Such as soft metals, bark, and stone.
+    - title: Regeneration
+    - content: You can tap into the trolls greatest ability to stave off damage. As a reaction, when you take damage you can expend a Hit Die to reduce the damage by the amount rolled. You cannot reduce the damage if it is 
+               acid or fire damage.
