--- a/Rulesets/witch_subclasses.yaml
+++ b/Rulesets/witch_subclasses.yaml
@@ -195,7 +195,7 @@
                      
                      
                      
-  - title: Covenant of Blood Abilities
+  - title: Covenant of Unity Abilities
   - abilities: 
     - title: Spellcasting
     - abilities:
